--- a/create-account.html
+++ b/create-account.html
@@ -48,6 +48,12 @@
             display: none;
         }
 
+        .title{
+            font-size: var(--lg);
+            margin-bottom: 30px;
+            text-align: start;
+        }
+
 
         .label{
             font-size: var(--sm);
@@ -65,7 +71,9 @@
             margin-bottom: 12px;
         }
 
-        .input-email{
+        .input-name,
+        .input-email,
+        .input_password{
             margin-bottom: 20px;
         }
 
@@ -74,12 +82,9 @@
             flex-direction: column;
         }
 
-        .form a{
-            color: var(--hospital-green);
-            font-size: var(--sm);
-            text-decoration: none;
-            text-align: center;
-            margin-bottom: 50px;
+        .form div{
+            display: flex;
+            flex-direction: column;
         }
 
         .primary-button{
@@ -94,32 +99,19 @@
             height: 50px;
         }
 
-        .secondary-button{
-            color: var(--hospital-green);
-            background-color: var(--white);
-            border: 1px solid var(--hospital-green);
-            border-radius: 8px;
-            height: 50px;
-            font-size: var(--md);
-            font-weight: bold;
-            width: 100%;
-        }
-
         .login-button{
             margin-top: 12px;
             margin-bottom: 30px;
         }
 
         @media (max-width:640px) {
-            .logo{
-                display: block;
+            .form-container{
+                height: 100%;
             }
 
-            .secondary-button{
-                width: inherit;
-                position: absolute;
-                bottom: 0;
-                margin-bottom: 24px;
+            .form{
+                height: 100%;
+                justify-content: space-between;
             }
         }
     </style>
@@ -127,18 +119,20 @@
 <body>
     <div class="login">
         <div class="form-container">
-            <img src="Logos/logo_yard_sale.svg" alt="logo" class="logo">
-        
+            <h1 class="title">My account</h1>
             <form action="/" class="form">
-                <label for="email" class="label">Email <address></address></label>
-                <input type="email" id="email" placeholder="platzi@example.com" class="input input-email">
+                <div>
+                    <label for="name" class="label">Name</label>
+                    <input type="text" id="name" class="input input-name" placeholder="Name">
 
-                <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="********" class="input input-password">
-                <input type="submit" value="Log in" class="primary-button login-button">
-                <a href="/">Forgot my password</a>
+                    <label for="email" class="label">Email</label>
+                    <input type="email" id="email" class="input input-email"  placeholder="platzi@example.com">
+    
+                    <label for="password" class="label">Password</label>
+                    <input type="password" id="password" placeholder="********" class="input input-password">
+                </div>
+                <input type="submit" value="Create" class="primary-button login-button">
             </form>
-            <button class="secondary-button signup-button">Sign up</button>
         </div>
     </div>
 </body>
